<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <!-- Package's name -->
    <name>laser_scan_matcher</name>
    <!-- Package's version -->
    <version>0.3.2</version>
    <!-- Package's description -->
    <description>
    An incremental laser scan matcher, using Andrea Censi's Canonical Scan Matcher (CSM) implementation. 
    See <a href="http://censi.mit.edu/software/csm/">the web site</a> for more about CSM. NOTE the CSM 
    library is licensed under the GNU Lesser General Public License v3, whereas the rest of the code is
    released under the BSD license.
    </description>
    <!-- Webpages -->
    <url>http://wiki.ros.org/laser_scan_matcher</url>
    <!-- Package's authors -->
    <author email="ccnyroboticslab@gmail.com">Ivan Dryanovski</author>
    <author>William Morris</author>
    <author>Andrea Censi</author>
    <author email="cjaramillo@gc.cuny.edu">Carlos</author>
    <author email="130s@2000.jukuin.keio.ac.jp">Isaac I.Y. Saito</author>
    <author email="krzysztof.pierczyk@gmail.com">Krzysztof Pierczyk</author>
    <!-- Package's maintainer -->
    <maintainer email="krzysztof.pierczyk@gmail.com">Krzysztof Pierczyk</maintainer>
    <!-- Package's license -->
    <license>BSD</license>
    <license>LGPLv3</license>
    <license>MIT</license>

    <!-- Package's buildtool dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>cmake_common</buildtool_depend>
    <!-- Package's build dependencies -->
    <build_depend>rclcpp</build_depend>
    <build_depend>rclcpp_components</build_depend>
    <build_depend>node_common_cpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>scan_tools_msgs</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>csm</build_depend>
    <build_depend>libpcl-all-dev</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>librange-v3-dev</build_depend>
    <!-- Package's runtime dependencies -->
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rclcpp_components</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>scan_tools_msgs</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>csm</exec_depend>
    <exec_depend>libpcl-all</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>librange-v3</exec_depend>

    <!-- ================================================================================================= -->
    <!-- @note 'librange-v3-dev' rosdep System Dependency not yet supported in ROS2 Galaxy (Ubuntu Focal); -->
    <!--       requires manual downloading                                                                 -->
    <!-- ================================================================================================= -->

    <!-- Package's exports -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>